--- a/css/00_style.css
+++ b/css/00_style.css
@@ -1,8 +1,10 @@
 /* 00_style */
-
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ruwudu:wght@400;500;600;700&display=swap');
+#page { width: 100vw;}
 :root {
     /* Color styles */
    /* Color styles */
@@ -19,6 +21,21 @@
 --dark_green1: rgba(25, 69, 57, 1);
 --light_green_1: rgba(192, 223, 177, 1);
 --sky_blue: rgba(69, 189, 254, 1);
+/* 수정 추가 색상 */
+--white_8: rgba(204, 204, 204, 1);
+--white_9: rgba(248, 248, 248, 1);
+--gray_9: rgba(147, 144, 144, 1);
+--gray_10: rgba(244, 244, 244, 1);
+--gray_11: rgba(184, 180, 180, 1);
+--gray_12: rgba(146, 143, 143, 1);
+--gray_13: rgba(231, 231, 231, 1);
+--gray_13: rgba(239, 239, 239, 1);
+--gray_14: rgba(195, 195, 195, 1);
+--gray_15: rgba(123, 123, 123, 1);
+--gray_16: rgba(92, 83, 78, 1);
+--gray_17: rgba(44, 44, 44, 1);
+--gray_18: rgba(30, 30, 30, 1);
+--gray_19: rgba(204, 204, 204, 1);
 
 
 
@@ -40,11 +57,15 @@
 
 body{
     font-family: "Gowun Dodum", serif;
-    cursor: url(/img/커서최종.png), default;  
- 
+    cursor: url(../img/커서최종.png), default; 
+    overflow-x: hidden;   
 }
+
 a {text-decoration: none;color: var(--black);}
 li {display: block; list-style-type: none;}
 
 /* 국문 font-family: 'Gowun Dodum'; */
 /* 영문 font-family: "DM Serif Display", serif; */
+/* 노토산스kr  font-family: "Noto Sans KR", serif; */
+/* 기본 노토산스 font-family: "Noto Sans", sans-serif; */
+/* 수정 영문폰트   font-family: "Ruwudu", serif; */
