--- a/css/09_bottom_menu.css
+++ b/css/09_bottom_menu.css
@@ -1,120 +1,155 @@
-menu {
-    bottom: 0;
-    position: fixed;
-    background-color: white; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 5em; 
-    border-radius: 1.5625rem 1.5625rem 0rem 0rem; 
-}
-.구구 ul {
-    height: 6.25rem;
-    position: sticky;
-    top: 37.5rem; 
-}
+menu { bottom: 0; position: fixed; background-color: white; left: 0; right: 0; bottom: 0; height: 5em; width: 100vw; border-radius: 1.5625rem 1.5625rem 0rem 0rem; z-index: 150; } 
+.구구 ul { height: 6.25rem; position: sticky; top: 37.5rem; } 
 
-.hbg { 
-    float: left;
-    margin-top: 10px;
-}
-.hbg img {
-    width: 1.875rem;
-    margin-top: 10px;
-}
-.nmi {
-    float: left;
-    margin-top: 10px;
-}
-.nmi img {
-    width: 1.875rem;
-}
-.dgrm {
-    box-sizing: border-box;
-    border-radius: 50%;
-    width: 5rem;
-    height: 5rem;
-    background-color: var(--dark_green1);
-    border: 1px solid white;
-       text-align: center;
-    margin-left: -0.8rem;
-    display: flex;
-    justify-content: center;
-    margin: 1rem;
-    margin-top: -1.1rem;
-    
-    
-}
-.구구 {
-    display: flex;
-    justify-content: center;
-    gap: 0.1rem;
-    
-}
-.dgrm p {
-    font-size: 1.2rem; 
+.hbg { float: left; margin-top: 10px; position: relative; } 
+
+.hbg img { width: 1.875rem; margin-top: 10px; } 
+.nmi { float: left; margin-top: 10px; position: relative;} 
+.nmi img { width: 1.875rem; } 
+.dgrm { position: relative; box-sizing: border-box; border-radius: 50%; width: 5rem; height: 5rem; background-color: var(--dark_green1); border: 1px solid white; text-align: center; margin-left: -0.8rem; display: flex; justify-content: center; margin: 1rem; margin-top: -1.1rem; font-size: 1.2rem; font-family: "DM Serif Display", serif; color: white; text-align: center; align-items: center; }
+.구구 { display: flex; justify-content: center; gap: 0.1rem; }
+
+.heart { float: left; margin-top: 7px; margin-left: -0.4rem; position: relative;} 
+.heart img { width: 1.875rem; } 
+.user { float: left; margin-top: 7px; position: relative; } 
+.user img { width: 1.875rem; margin-top: 11px; } 
+
+.구구 li img { margin: 0.9375rem; } 
+
+.구구 li { margin-left: 0.3rem; } 
+.texthd1 {
+    align-items: center;
     position: absolute;
-    left: 8.3rem; 
-    top: 0.6rem; 
-    font-family: "DM Serif Display", serif;
-    margin-left: 1.8rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    color: var(--dark_green1);
+    font-size: 14px;
+    font-weight: bold;
+  }  
+  .hbg:hover .texthd1 {
+    opacity: 1;
+    background-color: white;
+  }
+.texthd2 {
+    position: absolute;
+    top: 48%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    color: var(--dark_green1);
+    font-size: 14px;
+    font-weight: bold;
+}
+.nmi:hover .texthd2 {
+    opacity: 1;
+    background-color: white;
+  }
+
+  .texthd3 {
+    position: absolute;
+    top: 30%;
+    left: 51%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
     color: white;
+    font-size: 13px;
+    font-weight: bold;
+    z-index: 50;
+    text-align: center;
 }
-.heart {
-    float: left;
-    margin-top: 7px;
-    margin-left: -0.4rem; 
+.mid:hover .texthd3 {
+    opacity: 1;
+    background-color: var(--dark_green1);
+    text-align: center;
+  }
+
+  .texthd4 {
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    color: var(--dark_green1);
+    font-size: 14px;
+    font-weight: bold;
 }
-.heart img {
-    width: 1.875rem; 
+.heart:hover .texthd4 {
+    opacity: 1;
+    background-color: white;
+  }
+  .texthd5 {
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    color: var(--dark_green1);
+    font-size: 14px;
+    font-weight: bold;
 }
-.user {
-    float: left;
-    margin-top: 7px;
+.user:hover .texthd5 {
+   
+    opacity: 1;
+    background-color: white;
+  }
+  
+  
+
+
+
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1439px) { /* 768px = 48rem */
+ img { margin-left: 5rem; /* 80px = 5rem */ } 
+ .dgrm { width: 8.125rem; /* 130px = 8.125rem */
+ height: 8.125rem; /* 130px = 8.125rem */
+ border-radius: 50%; margin-left: 1rem; /* 45px = 2.8125rem */
+ margin-top: -3.125rem; /* -50px = -3.125rem */}
+ .dgrm p { font-size: 1.5625rem; /* 25px = 1.5625rem */
+ letter-spacing: 0.3125rem; /* 5px = 0.3125rem */
+ color: white; display: flex; align-items: center; justify-content: center; padding: 0; margin: 0; } 
+ .구구 { 
+ gap: 2rem; } 
+
+.texthd1 {
+    left: 50%;
 }
-.user img {
-    width: 1.875rem; 
-    margin-top: 11px;
-}
-
-.구구 li img {
-    margin: 0.9375rem; 
-}
-
-.구구 li {
-    margin-left: 0.3rem;
-}
-
-
-
-
-
-
-@media screen and (min-width: 768px) and (max-width: 1439px){ /* 768px = 48rem */
-    img { margin-left: 5rem; /* 80px = 5rem */ }
-    .dgrm {
-        width: 8.125rem; /* 130px = 8.125rem */
-        height: 8.125rem; /* 130px = 8.125rem */
-        border-radius: 50%;
-        margin-left: 1rem; /* 45px = 2.8125rem */
-        margin-top: -3.125rem; /* -50px = -3.125rem */
-    }
-    .dgrm p {
-        font-size: 1.5625rem; /* 25px = 1.5625rem */
-        letter-spacing: 0.3125rem; /* 5px = 0.3125rem */
-        color: white;
-        position: absolute;
-        top: 0.1rem; /* -13px = -0.8125rem */
-        margin-left: 13rem;
-    }
-    .구구 {
-        
-        gap: 2rem;
-    }
-
+.texthd2 {
+    left: 50%;
 }
 
+.texthd3 {
+    font-size: 1.3rem;
+    left: 50.5%;
+    top: 25%;
+}
+.texthd4 {
+    left: 50%;
+    top: 49%;
+}
+.texthd5 {
+    left: 50%;
+    top: 49%;
+}
 
-@media screen and (min-width: 1440px){ /* 1024px = 64rem */
-    menu { display: none;}
+.texthd1, .texthd2, .texthd4, .texthd5 {
+    font-size: 1rem;
+}
+
+}
+
+
+@media screen and (min-width: 1440px) { /* 1024px = 64rem */
+ menu { display: none; } 
+ #page {width: 99vw;} 
+  /* .menususu-button { margin-top: 0; position: absolute; top: 2rem;} */
 }
